# nav

./: .justfile  CMakeLists.txt  CMakePresets.json  README.md
bench/: nav_hashing.cpp
cmake/: helper.cmake
include/nav/: core.hpp  nav.hpp  nav_charconv.hpp  nav_core.hpp  nav_fuzzy_match.hpp  nav_hashmap.hpp  nav_iostream.hpp  nav_libfmt.hpp  nav_lowercase.hpp
test_code/: count_states_x10.cpp  print_names.cpp
tests/: charconv.cpp  fuzzy_match.cpp  nav_core.cpp  nav_extra.cpp  nav_iostream.cpp  nav_lowercase.cpp  sparse_enums.cpp  test_nav.cpp
